<resources>
    <string name="app_name">BattleShip</string>
    <string name="start">Create match</string>
    <string name="wait">Connect to the match</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="no_permission">Without the permission, you cannot play at this game</string>
    <string name="not_connected">Connection expired</string>
    <string name="waiting">Waiting for enemy…</string>

    <string name="game_result">Win/Lose</string>
    <string name="device_name">Opponent device</string>
    <string name="data">mm/dd/yyyy</string>
    <string name="number_ship_lost" translatable="false">x</string>
    <string name="number_ship_hitted" translatable="false">y</string>
    <string name="count_sw_four" translatable="false">x 1</string>
    <string name="count_sw_one" translatable="false">x 3</string>
    <string name="count_sw_three" translatable="false">x 1</string>
    <string name="count_sw_two" translatable="false">x 2</string>
    <string name="btn_confirm">Confirm</string>
    <string name="position_ship_title">Place your ships</string>
    <string name="no_prev">No previously connected devices.</string>
    <string name="example_text_et_fire" translatable="false">Ex: B2</string>
    <string name="btn_fire">Open fire</string>
    <string name="btn_surrender">Surrender</string>
    <string name="tv_connected_device">Previously connected devices</string>
    <string name="tv_discovered_devices">Discovered devices</string>
    <string name="tv_game_history">Game History</string>
    <string name="game_over">You surrender the game</string>
    <string name="pattern" translatable="false">dd-mm-yy</string>
    <string name="lose">Lost</string>
    <string name="win">Win</string>
    <string name="surrender">Surrender</string>
    <string name="hitted">Number of ship hitted:</string>
    <string name="lost">Number of ship lost:</string>
    <string name="enemy_turn">It\'s Enemy Turn!</string>
    <string name="your_turn">It\'s Your turn!</string>
    <string name="game_win">You win the game!</string>
    <string name="game_lose">You lose this one :(</string>
    <string name="btnFinish">Finish</string>
    <string name="match_over">Game Over</string>
    <string name="finish">Go to the main menu</string>
    <string name="cont_descr_exit" translatable="false">exit</string>
</resources>
